<resources>
    <string name="app_name">Elevate</string>
    <string name="salary">Salary</string>
    <string name="SalaryNumber">$2,500</string>
    <string name="new_transactions">New Transaction</string>
    <string name="description">Description (e.g. Coffee)</string>
    <string name="amount">Amount ($)</string>
    <string name="save">Save</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="user_name">Hamza Barakat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="buy_iphone">Buy iPhone</string>
    <string name="_200_1100">$200 / $1100</string>
    <string name="buy_car">Buy Car</string>
    <string name="_10000_38000">$10000 /38000</string>
    <string name="investment">Investment</string>
    <string name="total_investment">Total Investment</string>
    <string name="_15_626">15,626</string>
    <string name="_4200_00">$4200.00</string>
    <string name="see_all">See all</string>
    <string name="income">Income</string>
    <string name="_2750_00">$2750.00</string>
    <string name="expenses">Expenses</string>
    <string name="_8271">**** **** **** 8271</string>
    <string name="_17_500">$17,500</string>
    <string name="total_balance">Total Balance</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="bell_for_notifications">Bell For Notifications</string>
    <string name="goals">Goals</string>
    <string name="expense">Expense</string>
    <string name="category">Category</string>
    <string name="splash_text">take your finances to the next level</string>
    <string name="amount_to_save_today">Amount to fund the goal</string>
    <string name="deposit">Deposit</string>
    <string name="_0_00">0.00</string>
    <string name="invest">Invest</string>
    <string name="your_goals">Your Goals</string>
    <string name="add_new_goal">+  Add New Goal</string>
    <string name="goal_name_e_g_buy_iphone">Goal Name (e.g. Buy iPhone)</string>
    <string name="new_goal">New Goal</string>
    <string name="target_amount">Target Amount</string>
    <string name="save_goal">Save Goal</string>
    <string name="new_investment">New Investment</string>
    <string name="Stocks">Title (e.g. Stocks)</string>
    <string name="notifications">Notifications</string>
    <string name="title_e_g_coffee">Title (e.g. Coffee)</string>
    <string name="fund_goal">Fund Goal</string>
    <string name="overview">Overview:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_transactions">All Transactions</string>
    <string name="search_transactions">Search transactions...</string>
    <string name="type_all">Type: All</string>
    <string name="category_all">Category: All</string>
    <string name="date_all_time">Date: All Time</string>
    <string name="sort_newest">Sort: Newest</string>
    <string name="no_transactions_found">No transactions found.</string>
    <string name="tvEmptySubMessage">Try adjusting your filters or some words.</string>
    <string name="add_transaction_Button">Add Transaction</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="cancel">Cancel</string>
    <string name="current_period">November 2026</string>
    <string name="overview_tap">Overview</string>
    <string name="spending_analytics">Spending Analytics</string>
    <string name="float_button_transaction_text">Press if you want to add Transaction</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="expense_with_arrow_down">↓ Expense</string>
    <string name="income_arrow_up">↑ Income</string>
    <string name="balance_widget">Balance Widget</string>
    <string name="reset">Reset All Data</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="preferences">PREFERENCES</string>
    <string name="first_day_of_week">First Day of Week</string>
    <string name="your_name">Your Name</string>
    <string name="currency">Currency</string>
    <string name="fingerprint_lock">Fingerprint Lock</string>
    <string name="theme">Theme</string>
    <string name="delete_all_transactions_and_goals">Delete all transactions and goals</string>
    <string name="data_management">DATA MANAGEMENT</string>
    <string name="security">SECURITY</string>
    <string name="try_again">Try Again</string>
    <string name="place_your_finger_on_the_sensor">Place your finger on the sensor</string>
    <string name="choose_your_preferred_currency">Choose your preferred currency</string>
    <string name="search_currency">Search currency...</string>
    <string name="date">Date</string>
    <string name="note_optional">Note (Optional)</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="new_transaction">New Transaction</string>
    <string name="how_much">How much?</string>
    <string name="title_required">Title (Required)</string>
    <string name="description_required">Description (Required)</string>
    <string name="add_budget_limit">Add Budget Limit</string>
    <string name="select_category">Select Category</string>
    <string name="limit_amount">Limit Amount</string>
    <string name="save_bt">Save</string>
</resources>